// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[snapshot] SquareFence SquareFence 1`] = `
<div
  className="SquareFence_wrap_3jTo2"
>
  <img
    alt="SquareFence"
    src="SquareFence.png"
  />
</div>
`;

exports[`[snapshot] SquareFence SquareFence with custom elementType 1`] = `
<span
  className="SquareFence_wrap_3jTo2"
>
  <img
    alt="SquareFence"
    src="SquareFence.png"
  />
</span>
`;
